# chonk-note

./: .gitignore  CHONKER7_SPEC.md  Cargo.toml  Cargo_no_ml.toml  Cargo_simple.toml  HELIX_NATIVE_ARCHITECTURE.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  KITTY_HACK_EXPLAINED.md  ML_SETUP.md  OCR_MODULE_SPEC.md  PDFIUM_NOT_FERRULES.md  QUICK_START_HELIX.md  README.md  REFACTOR_PLAN.md  TEST_PLAN.md  auto_test.sh  check_clicks.sh  debug_run.sh  diagnose.sh  install.sh  install_blob_emoji.sh  run.sh  run_with_logging.sh  test.sh  test_block_selection.sh  test_column_extraction.rs  test_columns.rs  test_ctrl_r.sh  test_hamster.sh  test_harness.sh  test_kitty_graphics.rs  test_notes.md  test_notes.sh  test_pdf_load.sh  test_simple_kitty.sh
scripts/: convert_to_coreml.py
src/: block_selection.rs  chunked_grid.rs  config.rs  content_extractor.rs  content_extractor_pdfium.rs  coordinate_system.rs  coordinate_test.rs  coordinate_validator.rs  debug.rs  debug_capture.rs  debug_overlay.rs  dual_pane_keyboard.rs  edit_renderer.rs  ferrules_extractor.rs  file_picker.rs  grid_cursor.rs  helix_keymap.rs  helix_native_editor.rs  keyboard.rs  kitty_file_picker.rs  kitty_graphics.rs  kitty_native.rs  lib.rs  logger.rs  macos_services.rs  main.rs  main_helix.rs  markdown_renderer.rs  minimal_debug.rs  mouse.rs  notes_database.rs  notes_keyboard.rs  notes_mode.rs  pdf_renderer.rs  pdf_to_grid.rs  pdfium_spatial_extractor.rs  renderer.rs  simple_helix_editor.rs  simple_pdfium_extractor.rs  spotlight_indexer.rs  (+12 more)
src/ml/: coreml_bridge.rs  document_understanding.rs  inference.rs  layoutlm.rs  mod.rs  model_loader.rs  tensor_utils.rs
src/ocr/: engine.rs  mod.rs  models.rs  pdf_layer.rs  ui.rs
tests/: test_ml.rs
