[package]
name = "chonker7"
version = "7.0.0"
edition = "2021"
default-run = "chonker7"

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "time"] }

# Terminal UI
crossterm = "0.28"  # TODO: Still used by edit_renderer and old file_picker

# PDF - using pdfalto instead of pdfium
# pdfium removed - using pdfalto + leptess only
image = "0.25"  # Single image version

# Image display in terminal
viuer = { version = "0.7.1", default-features = false }
image_0_24 = { package = "image", version = "0.24" }  # Still needed for viuer compatibility

# File picker
nucleo = "0.5"  # TODO: Still used by old file_picker module

# FAST clipboard - ELIMINATED! Direct macOS calls
# copypasta = "0.10"  # REMOVED - pbcopy/pbpaste only

# Text editing - HELIX-CORE INTEGRATION!
tempfile = "3.22"  # Force newer version to resolve conflicts
helix-core = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }

# Basic utilities
lazy_static = "1.4"
# chrono = { version = "0.4", features = ["serde"] }  # ELIMINATED - not needed without debug timestamps
unicode-width = "0.1"  # Needed for block selection visual columns
libc = "0.2"

# OCR
leptess = "0.14"

# Notes mode (from snyfter3)
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"  # For note ID generation
dirs = "5.0"  # For database directory
once_cell = "1.19"  # For lazy static logging


# Dependency duplicates will be resolved when crossterm is fully eliminated