[package]
name = "chonk-note"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "chonk-note"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "time"] }

# Terminal UI
crossterm = "0.28"

# Text editing - HELIX-CORE INTEGRATION!
tempfile = "3.22"
helix-core = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }

# Basic utilities
lazy_static = "1.4"
unicode-width = "0.1"  # Needed for block selection visual columns
libc = "0.2"

# Notes mode
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"  # For note ID generation
dirs = "5.0"  # For database directory
once_cell = "1.19"  # For lazy static logging