[package]
name = "chonk-note"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "chonk-note"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "time"] }

# Terminal UI
crossterm = "0.28"

# Basic utilities
lazy_static = "1.4"
libc = "0.2"

# Notes mode
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"  # For note ID generation
dirs = "5.0"  # For database directory
once_cell = "1.19"  # For lazy static logging